--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "nodemailer": "^6.9.1",
+        "@next/font": "^13.4.2",
+        "axios": "^1.4.0",
+        "next": "^13.4.2",
+        "nextjs-progressbar": "^0.0.16",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-scripts": "5.0.1",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "eject": "react-scripts eject"
+        "dev": "next dev -p 2023",
+        "build": "next build && next export",
+        "start": "next start",
+        "lint": "next lint"
     },
     "eslintConfig": {
         "extends": [
