--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     },
     "scripts": {
         "dev": "next dev -p 2023",
-        "build": "next build && next export",
+        "build": "next build",
         "start": "next start",
         "lint": "next lint"
     },
@@ -41,3 +41,4 @@
         "tailwindcss": "^3.1.8"
     }
 }
+
