--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "dev": "next dev -p 5200",
+        "dev": "next dev ",
         "build": "next build",
         "start": "next start",
         "lint": "next lint"
